--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,10 +1,11 @@
-"lint-staged": {
-  "*": [
+{
+  "*.{json,txt}": [
       "prettier --write", 
       "git add"
   ],
   "src/**/*.ts": [
     "prettier --write",
+    "tslint --fix",
     "git add"
   ]
 }
