--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "nodemon": "^1.18.9",
+    "prettier": "^1.15.3",
     "ts-node": "^7.0.1",
     "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
