basic setup, swagger WIP

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,10 +1,9 @@
 {
-  "*.{json,txt}": [
+  "*.json": [
       "prettier --write", 
       "git add"
   ],
   "*.ts": [
-    "prettier --write",
     "tslint --fix",
     "git add"
   ]
