--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-  "name": "express-typescript",
+  "name": "express-typescript-starter",
   "author": "Nikita Stryuk",
   "license": "ISC",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node bin/src/index.js",
     "dev": "nodemon --exec ts-node src/index.ts --watch src",
-    "build": "rimraf dist && tsc"
+    "build": "rimraf bin && tsc"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "compression": "^1.7.3",
+    "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "express-async-handler": "^1.1.4",
+    "helmet": "^3.15.0",
+    "http-status": "^1.3.1",
+    "mongoose": "^5.4.3",
+    "morgan": "^1.9.1",
+    "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
+    "@types/compression": "0.0.36",
+    "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
+    "@types/helmet": "0.0.42",
+    "@types/mongoose": "^5.3.7",
+    "@types/morgan": "^1.7.35",
+    "@types/swagger-ui-express": "^3.0.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "nodemon": "^1.18.9",
@@ -21,6 +37,7 @@
     "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.2.2"
   }
 }
