--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node bin/src/index.js",
     "dev": "nodemon --exec ts-node src/index.ts --watch src",
     "build": "npm run bundle-docs && rimraf bin && tsc",
-    "lint": "tslint --fix -c tslint.json 'src/**/*.ts'",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "serve-docs": "swagger-ui-watcher ./specification/swagger/index.json",
     "bundle-docs": "swagger-ui-watcher ./specification/swagger/index.json --bundle=./specification/openapi.json"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "celebrate": "^9.0.2",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -19,6 +21,7 @@
     "express-async-handler": "^1.1.4",
     "helmet": "^3.15.0",
     "http-status": "^1.3.1",
+    "joi-objectid": "^2.0.0",
     "mongoose": "^5.4.3",
     "morgan": "^1.9.1",
     "swagger-ui-express": "^4.0.2"
