--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --exec ts-node src/index.ts --watch src",
     "build": "npm run bundle-docs && rimraf bin && tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "test": "jest",
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "serve-docs": "swagger-ui-watcher ./specification/swagger/index.json",
     "bundle-docs": "swagger-ui-watcher ./specification/swagger/index.json --bundle=./specification/openapi.json"
@@ -32,15 +33,17 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.42",
+    "@types/jest": "^24.0.6",
     "@types/mongoose": "^5.3.7",
     "@types/morgan": "^1.7.35",
     "@types/swagger-ui-express": "^3.0.0",
     "husky": "^1.3.1",
+    "jest": "^24.1.0",
     "lint-staged": "^8.1.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
     "swagger-ui-watcher": "^2.1.6",
-    "ts-node": "^7.0.1",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.17.0",
