--- a/specification/swagger/components.json
+++ b/specification/swagger/components.json
@@ -1,13 +1,7 @@
 {
   "schemas": {
-    "UserReadSchema": {
+    "User": {
       "$ref": "./schemas/user/userReadSchema.json"
-    },
-    "UserCreateSchema": {
-      "$ref": "./schemas/user/userCreateSchema.json"
-    },
-    "UserUpdateSchema": {
-      "$ref": "./schemas/user/userUpdateSchema.json"
     }
   }
 }
