--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB_URL=mongodb://Admin:pass123@ds153974.mlab.com:53974/express-ts-starter
+DB_LOCAL_URL=mongodb://localhost/express-ts-starter
 NODE_ENV=dev
 PORT=3000
 NAME=Express-typescript-starter
