--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npm run bundle-docs && rimraf bin && tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "jest",
+    "coverage": "jest --collectCoverageFrom=src/**.ts --passWithNoTests --coverage src",
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "serve-docs": "swagger-ui-watcher ./specification/swagger/index.json",
     "bundle-docs": "swagger-ui-watcher ./specification/swagger/index.json --bundle=./specification/openapi.json"
@@ -36,13 +37,16 @@
     "@types/jest": "^24.0.6",
     "@types/mongoose": "^5.3.7",
     "@types/morgan": "^1.7.35",
+    "@types/supertest": "^2.0.7",
     "@types/swagger-ui-express": "^3.0.0",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lint-staged": "^8.1.0",
     "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
+    "supertest": "^3.4.2",
     "swagger-ui-watcher": "^2.1.6",
+    "ts-jest": "^24.0.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.0",
     "tslint-config-airbnb": "^5.11.1",
