--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "outDir": "bin",
     "esModuleInterop": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["node_modules"]
 }
