--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build": "npm run bundle-docs && rimraf bin && tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "jest",
-    "coverage": "jest --collectCoverageFrom=src/**.ts --passWithNoTests --coverage src",
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "serve-docs": "swagger-ui-watcher ./specification/swagger/index.json",
     "bundle-docs": "swagger-ui-watcher ./specification/swagger/index.json --bundle=./specification/openapi.json"
   },
   "dependencies": {
+    "@wegolook/joi-objectid": "^2.4.0",
     "body-parser": "^1.18.3",
     "celebrate": "^9.0.2",
     "compression": "^1.7.3",
@@ -23,7 +23,6 @@
     "express-async-handler": "^1.1.4",
     "helmet": "^3.15.0",
     "http-status": "^1.3.1",
-    "joi-objectid": "^2.0.0",
     "mongoose": "^5.4.3",
     "morgan": "^1.9.1",
     "swagger-ui-express": "^4.0.2"
@@ -35,6 +34,7 @@
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.42",
     "@types/jest": "^24.0.6",
+    "@types/joi": "^14.3.2",
     "@types/mongoose": "^5.3.7",
     "@types/morgan": "^1.7.35",
     "@types/supertest": "^2.0.7",
