--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "outDir": "bin",
+    "skipLibCheck": true,
     "esModuleInterop": true
   },
   "include": ["src/**/*", "tests/**/*"],
