--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_URL=mongodb://Admin:pass123@ds153974.mlab.com:53974/express-ts-starter
 DB_LOCAL_URL=mongodb://localhost/express-ts-starter
+REDIS_URL=redis://127.0.0.1:6379
 NODE_ENV=dev
 PORT=3000
 NAME=Express-typescript-starter
