--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "license": "ISC",
   "scripts": {
     "start": "node bin/src/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts --watch src",
+    "dev": "nodemon --exec ts-node --files src/index.ts --watch src",
     "build": "npm run bundle-docs && rimraf bin && tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "jest",
+    "test": "jest --runInBand",
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "serve-docs": "swagger-ui-watcher ./specification/swagger/index.json",
     "bundle-docs": "swagger-ui-watcher ./specification/swagger/index.json --bundle=./specification/openapi.json"
   },
   "dependencies": {
-    "@wegolook/joi-objectid": "^2.4.0",
     "body-parser": "^1.18.3",
     "celebrate": "^9.0.2",
     "compression": "^1.7.3",
@@ -23,8 +22,11 @@
     "express-async-handler": "^1.1.4",
     "helmet": "^3.15.0",
     "http-status": "^1.3.1",
+    "joi-objectid": "^2.0.0",
     "mongoose": "^5.4.3",
     "morgan": "^1.9.1",
+    "redis": "^2.8.0",
+    "rotating-file-stream": "^1.4.0",
     "swagger-ui-express": "^4.0.2"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/joi": "^14.3.2",
     "@types/mongoose": "^5.3.7",
     "@types/morgan": "^1.7.35",
+    "@types/redis": "^2.8.10",
     "@types/supertest": "^2.0.7",
     "@types/swagger-ui-express": "^3.0.0",
     "husky": "^1.3.1",
