--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node bin/src/index.js",
     "dev": "nodemon --exec ts-node --files src/index.ts --watch src",
     "build": "npm run bundle-docs && rimraf bin && tsc",
+    "test": "jest --detectOpenHandles --runInBand",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "jest --runInBand",
     "lint:fix": "tslint --fix -c tslint.json 'src/**/*.ts'",
     "serve-docs": "swagger-ui-watcher ./specification/swagger/index.json",
     "bundle-docs": "swagger-ui-watcher ./specification/swagger/index.json --bundle=./specification/openapi.json"
@@ -18,6 +18,7 @@
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
     "helmet": "^3.15.0",
@@ -33,6 +34,7 @@
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
+    "@types/escape-string-regexp": "^1.0.0",
     "@types/express": "^4.16.0",
     "@types/helmet": "0.0.42",
     "@types/jest": "^24.0.6",
