--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
 version: 2
 jobs:
-  'node-10':
+  build:
     docker:
-      - image: circleci/node:10
-    working_directory: ~/typescript-starter
+      - image: circleci/node:lts
+      - image: circleci/mongo:latest
+      - image: circleci/redis:latest
+    working_directory: ~/repo
     steps:
       - checkout
       # Download and cache dependencies
@@ -18,30 +20,3 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
-      - run: npx nyc report --reporter=lcov | npx codecov
-      - run: npm run cov:check
-  'node-latest':
-    docker:
-      - image: circleci/node:latest
-    working_directory: ~/repo
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
-      - run: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-      - run: npm test
-      - run: npx nyc report --reporter=lcov | npx codecov
-      - run: npm run cov:check
-
-workflows:
-  version: 2
-  build:
-    jobs:
-      - 'node-10'
-      - 'node-latest'
