--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,19 @@ jobs:
   build:
     docker:
       - image: circleci/node:lts
+      - image: circleci/mongo:latest
+      - image: circleci/redis:latest
     working_directory: ~/repo
+    branches:
+      only:
+        - master
     steps:
       - checkout
       # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
+            # Fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run: npm install
       - save_cache:
