--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,4 +19,5 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm lint
       - run: npm test
