--- a/package.json
+++ b/package.json
@@ -13,50 +13,50 @@
     "bundle-docs": "swagger-ui-watcher ./specification/swagger/index.json --bundle=./specification/openapi.json"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "celebrate": "^9.0.2",
-    "compression": "^1.7.3",
-    "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
-    "escape-string-regexp": "^1.0.5",
-    "express": "^4.16.4",
-    "express-async-handler": "^1.1.4",
-    "helmet": "^3.15.0",
-    "http-status": "^1.3.1",
-    "joi-objectid": "^2.0.0",
-    "mongoose": "^5.4.3",
-    "morgan": "^1.9.1",
-    "redis": "^2.8.0",
-    "rotating-file-stream": "^1.4.0",
-    "swagger-ui-express": "^4.0.2"
+    "body-parser": "1.18.3",
+    "celebrate": "10.0.0",
+    "compression": "1.7.3",
+    "cors": "2.8.5",
+    "dotenv": "8.0.0",
+    "escape-string-regexp": "2.0.0",
+    "express": "4.16.4",
+    "express-async-handler": "1.1.4",
+    "helmet": "3.15.0",
+    "http-status": "1.3.1",
+    "joi-objectid": "2.0.0",
+    "mongoose": "5.4.3",
+    "morgan": "1.9.1",
+    "redis": "2.8.0",
+    "rotating-file-stream": "1.4.0",
+    "swagger-ui-express": "4.0.2"
   },
   "devDependencies": {
     "@types/compression": "0.0.36",
-    "@types/cors": "^2.8.4",
-    "@types/dotenv": "^6.1.0",
-    "@types/escape-string-regexp": "^1.0.0",
-    "@types/express": "^4.16.0",
-    "@types/helmet": "0.0.42",
-    "@types/jest": "^24.0.6",
-    "@types/joi": "^14.3.2",
-    "@types/mongoose": "^5.3.7",
-    "@types/morgan": "^1.7.35",
-    "@types/redis": "^2.8.10",
-    "@types/supertest": "^2.0.7",
-    "@types/swagger-ui-express": "^3.0.0",
-    "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "lint-staged": "^8.1.0",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.15.3",
-    "supertest": "^3.4.2",
-    "swagger-ui-watcher": "^2.1.6",
-    "ts-jest": "^24.0.0",
-    "ts-node": "^8.0.2",
-    "tslint": "^5.12.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.2.2"
+    "@types/cors": "2.8.4",
+    "@types/dotenv": "6.1.0",
+    "@types/escape-string-regexp": "2.0.1",
+    "@types/express": "4.16.0",
+    "@types/helmet": "0.0.43",
+    "@types/jest": "24.0.6",
+    "@types/joi": "14.3.2",
+    "@types/mongoose": "5.3.7",
+    "@types/morgan": "1.7.35",
+    "@types/redis": "2.8.10",
+    "@types/supertest": "2.0.7",
+    "@types/swagger-ui-express": "3.0.0",
+    "husky": "2.2.0",
+    "jest": "24.1.0",
+    "lint-staged": "8.1.0",
+    "nodemon": "1.18.9",
+    "prettier": "1.15.3",
+    "supertest": "4.0.2",
+    "swagger-ui-watcher": "2.1.6",
+    "ts-jest": "24.0.0",
+    "ts-node": "8.0.2",
+    "tslint": "5.12.0",
+    "tslint-config-airbnb": "5.11.1",
+    "tslint-config-prettier": "1.17.0",
+    "tslint-plugin-prettier": "2.0.1",
+    "typescript": "3.2.2"
   }
 }
